--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ aliases:
     command: yarn lint
   - &test
     name: Test
-    command: yarn test:coverage
+    command: yarn test
   - &build
     name: Build
     command: yarn build
