--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-readme",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Generate docs from typescript + jsdoc and put it in a README",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
@@ -10,6 +10,9 @@
   "contributors": [
     "Andrew Lisowski lisowski54@gmail.com"
   ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
   "license": "MIT",
   "bin": "bin/ts-readme.js",
   "scripts": {
