--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -20,7 +20,8 @@
         "doc",
         "ideas",
         "infra",
-        "maintenance"
+        "maintenance",
+        "test"
       ]
     }
   ],
